using System.Collections;
using System.Collections.Generic;
using UnityEngine;

[CreateAssetMenu(fileName = "NewLevelScene", menuName = "Scene Data/Level")]
public class StageLevel : GameScene
{
    
}
